[project]
name = "PySpring-Redis"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "William Chen", email = "william_w_chen@trendmicro.com"},
]
dependencies = [
    "redis>=5.1.0",
    "py-spring @ git+https://github.com/PythonSpring/pyspring-core.git"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
version = { source = "file", path = "py_spring_redis/__init__.py" }

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.8",
    "isort>=5.13.2",
]
